--- a/strand/iOS/Strand/Strand/DFStrandGalleryTitleView.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryTitleView.xib
@@ -7,18 +7,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFStrandGalleryTitleView">
-            <rect key="frame" x="0.0" y="0.0" width="295" height="44"/>
+        <view contentMode="scaleToFill" horizontalHuggingPriority="251" id="iN0-l3-epB" customClass="DFStrandGalleryTitleView">
+            <rect key="frame" x="0.0" y="0.0" width="174" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Sy-97-6b8">
-                    <rect key="frame" x="114" y="22" width="66" height="16"/>
+                    <rect key="frame" x="8" y="22" width="158" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="006-2i-JNe">
-                    <rect key="frame" x="103" y="6" width="89" height="16"/>
+                    <rect key="frame" x="8" y="6" width="158" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -26,18 +26,27 @@
             </subviews>
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="0Sy-97-6b8" secondAttribute="trailing" constant="8" id="1J2-oD-Mop"/>
+                <constraint firstItem="006-2i-JNe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="DVr-33-cP2"/>
                 <constraint firstAttribute="centerX" secondItem="006-2i-JNe" secondAttribute="centerX" id="H4b-Xv-8bD"/>
                 <constraint firstAttribute="centerY" secondItem="0Sy-97-6b8" secondAttribute="centerY" constant="-8" id="PYm-nX-2pa"/>
                 <constraint firstAttribute="centerY" secondItem="006-2i-JNe" secondAttribute="centerY" constant="8" id="UbN-QS-dmF"/>
+                <constraint firstItem="0Sy-97-6b8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="ZZb-b2-aQe"/>
+                <constraint firstAttribute="trailing" secondItem="006-2i-JNe" secondAttribute="trailing" constant="8" id="g6S-e1-lu0"/>
                 <constraint firstAttribute="centerX" secondItem="0Sy-97-6b8" secondAttribute="centerX" id="nzq-Eq-BHA"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="H4b-Xv-8bD"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="locationLabel" destination="006-2i-JNe" id="6Y4-IT-7ve"/>
                 <outlet property="timeLabel" destination="0Sy-97-6b8" id="bhr-4X-QXE"/>
             </connections>
-            <point key="canvasLocation" x="231.5" y="47"/>
+            <point key="canvasLocation" x="292" y="47"/>
         </view>
     </objects>
 </document>
