--- a/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="524" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="525"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="432" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="433"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
@@ -20,18 +20,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="favoritersList" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5m-xw-TWf" userLabel="favoritersList">
-                        <rect key="frame" x="10" y="440" width="300" height="17"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="17" id="3VC-kh-nlc"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="Button" image="Assets/Icons/LikersListIcon">
-                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                    </button>
-                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EPr-aP-pSV">
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EPr-aP-pSV">
                         <rect key="frame" x="0.0" y="32" width="320" height="320"/>
                         <gestureRecognizers/>
                         <constraints>
@@ -55,57 +44,6 @@
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
                         <rect key="frame" x="150" y="188" width="20" height="20"/>
                     </activityIndicatorView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1S-w6-Jtc" userLabel="Actions bar">
-                        <rect key="frame" x="10" y="465" width="300" height="29"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="fST-z5-7nz" userLabel="favoriteButton" customClass="DFRoundedButton">
-                                <rect key="frame" x="0.0" y="0.0" width="111" height="29"/>
-                                <color key="backgroundColor" red="0.84313732385635376" green="0.84313732385635376" blue="0.84313732385635376" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="111" id="hSJ-ta-uUY"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="Favorite" image="Assets/Icons/LikeOffButtonIcon">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="selected" title="Favorited" image="Assets/Icons/LikeOnButtonIcon">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="favoriteButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="oea-Ql-RiH"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
-                                <rect key="frame" x="270" y="0.0" width="30" height="29"/>
-                                <color key="backgroundColor" red="0.84313732389999996" green="0.84313732389999996" blue="0.84313732389999996" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="gdO-FC-ViP"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="...">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="selected">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="moreOptionsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Zzr-O1-SY2"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="fST-z5-7nz" firstAttribute="top" secondItem="U1S-w6-Jtc" secondAttribute="top" id="DEp-yY-1xy"/>
-                            <constraint firstAttribute="bottom" secondItem="B5M-0I-S31" secondAttribute="bottom" id="DMp-wp-l01"/>
-                            <constraint firstAttribute="bottom" secondItem="fST-z5-7nz" secondAttribute="bottom" id="Eme-SH-pyu"/>
-                            <constraint firstItem="B5M-0I-S31" firstAttribute="top" secondItem="U1S-w6-Jtc" secondAttribute="top" id="YiK-hw-Rjb"/>
-                            <constraint firstAttribute="trailing" secondItem="B5M-0I-S31" secondAttribute="trailing" id="Ypw-2h-UIb"/>
-                            <constraint firstItem="fST-z5-7nz" firstAttribute="leading" secondItem="U1S-w6-Jtc" secondAttribute="leading" id="a4I-cQ-wqz"/>
-                            <constraint firstAttribute="height" constant="29" id="kOJ-Yo-7ov"/>
-                        </constraints>
-                    </view>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhR-gV-Znx">
                         <rect key="frame" x="220" y="13" width="90" height="16"/>
                         <constraints>
@@ -116,47 +54,55 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
+                        <rect key="frame" x="290" y="332" width="30" height="20"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="gdO-FC-ViP"/>
+                            <constraint firstAttribute="height" constant="20" id="tOr-j5-HRy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <state key="normal" title="...">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <state key="selected">
+                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="moreOptionsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Zzr-O1-SY2"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" id="07M-SB-Mi0"/>
                     <constraint firstItem="xhR-gV-Znx" firstAttribute="leading" secondItem="HE2-Vf-wok" secondAttribute="trailing" id="1YF-IO-PF8"/>
-                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="900" constant="8" id="BMx-TO-HYc"/>
                     <constraint firstAttribute="trailing" secondItem="xhR-gV-Znx" secondAttribute="trailing" constant="10" id="DBh-P5-CPz"/>
-                    <constraint firstAttribute="trailing" secondItem="U1S-w6-Jtc" secondAttribute="trailing" constant="10" id="EAA-NR-agd"/>
+                    <constraint firstItem="B5M-0I-S31" firstAttribute="bottom" secondItem="EPr-aP-pSV" secondAttribute="bottom" id="IOC-kM-Ymi"/>
+                    <constraint firstAttribute="bottom" secondItem="h07-n4-DgV" secondAttribute="bottom" id="MCp-yv-WuB"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" constant="1" id="Q48-yN-yzu"/>
-                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="800" constant="8" id="S0e-fU-RBu"/>
-                    <constraint firstAttribute="trailing" secondItem="v5m-xw-TWf" secondAttribute="trailing" constant="10" id="U2a-H5-vDZ"/>
                     <constraint firstAttribute="centerX" secondItem="EPr-aP-pSV" secondAttribute="centerX" id="UMD-W8-k6d"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="W57-RD-aTX"/>
-                    <constraint firstItem="v5m-xw-TWf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="emp-ho-p4y"/>
+                    <constraint firstAttribute="bottom" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="700" id="Xtu-ci-aht"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="fDr-AQ-CiI"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="HE2-Vf-wok" secondAttribute="bottom" constant="3" id="flS-ZR-bpc"/>
-                    <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="8" id="kcq-eS-SKN"/>
                     <constraint firstItem="HE2-Vf-wok" firstAttribute="centerY" secondItem="xhR-gV-Znx" secondAttribute="centerY" id="n4h-3S-fks"/>
                     <constraint firstItem="HE2-Vf-wok" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="o1z-cd-LaE"/>
-                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="qjF-xY-N9B"/>
-                    <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="900" constant="8" id="u3r-jO-EWn"/>
-                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="v5m-xw-TWf" secondAttribute="bottom" constant="8" id="v2A-sz-rMw"/>
+                    <constraint firstItem="B5M-0I-S31" firstAttribute="trailing" secondItem="EPr-aP-pSV" secondAttribute="trailing" id="z0G-lF-dn0"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="collectionView" destination="h07-n4-DgV" id="l03-i2-iAq"/>
-                <outlet property="favoriteButton" destination="fST-z5-7nz" id="T7r-RU-IOa"/>
-                <outlet property="favoritersButton" destination="v5m-xw-TWf" id="F9j-ZI-47L"/>
                 <outlet property="loadingActivityIndicator" destination="6Gw-h8-Can" id="e70-WN-aaJ"/>
                 <outlet property="moreOptionsButton" destination="B5M-0I-S31" id="vGA-wj-gj8"/>
                 <outlet property="photoDateLabel" destination="xhR-gV-Znx" id="Rm7-Ee-eba"/>
                 <outlet property="photoImageView" destination="EPr-aP-pSV" id="f4q-6k-aBD"/>
                 <outlet property="titleLabel" destination="HE2-Vf-wok" id="epE-vc-jiD"/>
             </connections>
+            <point key="canvasLocation" x="389" y="236.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Assets/Icons/LikeOffButtonIcon" width="16" height="16"/>
-        <image name="Assets/Icons/LikeOnButtonIcon" width="16" height="16"/>
-        <image name="Assets/Icons/LikersListIcon" width="16" height="16"/>
-    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
