--- a/strand/iOS/Strand/Strand/DFStrandGallerySectionHeaderView.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGallerySectionHeaderView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -37,6 +38,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="0Aw-Sf-8ej" firstAttribute="leading" secondItem="9Gn-iv-GBQ" secondAttribute="trailing" constant="8" id="CWu-Fo-B8h"/>
                 <constraint firstItem="XpB-Cp-USz" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" constant="10" id="EKT-8R-AUv"/>
