--- a/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -19,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="qQw-mg-bqu">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="18" width="600" height="582"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7KE-aA-mQ9" customClass="DFGalleryCollectionViewFlowLayout">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -52,6 +53,7 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="qQw-mg-bqu" firstAttribute="top" secondItem="oSA-Sf-c6J" secondAttribute="bottom" id="951-4a-HMZ"/>
                 <constraint firstItem="qQw-mg-bqu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AAK-YL-SC3"/>
                 <constraint firstAttribute="bottom" secondItem="qQw-mg-bqu" secondAttribute="bottom" id="CNJ-Zy-P42"/>
                 <constraint firstAttribute="trailing" secondItem="PHW-KG-z5B" secondAttribute="trailing" id="JIx-fR-fZY"/>
@@ -61,6 +63,11 @@
                 <constraint firstItem="PHW-KG-z5B" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zPg-Sh-Vd0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="m5f-Pw-FKb"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
