--- a/strand/iOS/Strand/Strand/DFInboxTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFInboxTableViewCell.xib
@@ -7,14 +7,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" rowHeight="123" id="lqR-Yk-QtK" customClass="DFInboxTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" rowHeight="124" id="lqR-Yk-QtK" customClass="DFInboxTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lqR-Yk-QtK" id="edi-gP-GBl">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Kln-so-NCf">
-                        <rect key="frame" x="8" y="67" width="304" height="45"/>
+                        <rect key="frame" x="8" y="69" width="304" height="45"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="45" id="SYw-CP-P2h"/>
@@ -32,25 +32,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="action text label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejx-vN-IUf">
-                        <rect key="frame" x="47" y="8" width="240.5" height="17"/>
+                        <rect key="frame" x="47" y="8" width="241" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="900" text="1d" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pik-Vg-OiT">
-                        <rect key="frame" x="295.5" y="10" width="16.5" height="17"/>
+                        <rect key="frame" x="295" y="10" width="17" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFu-j8-B9v">
-                        <rect key="frame" x="8" y="24" width="279.5" height="17"/>
+                        <rect key="frame" x="8" y="25" width="280" height="17"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5dI-dr-scV">
-                        <rect key="frame" x="8" y="40" width="95" height="17"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5dI-dr-scV" userLabel="People wrapper">
+                        <rect key="frame" x="8" y="42" width="95" height="17"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="People label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsr-zM-wpW">
                                 <rect key="frame" x="16" y="0.0" width="80" height="17"/>
@@ -82,12 +82,13 @@
                     <constraint firstAttribute="trailing" secondItem="Ejx-vN-IUf" secondAttribute="trailing" priority="900" constant="8" id="4H8-ec-053"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="leading" secondItem="rlM-Qb-grC" secondAttribute="trailing" constant="3" id="4fU-Nj-v1i"/>
                     <constraint firstItem="Ejx-vN-IUf" firstAttribute="trailing" secondItem="kFu-j8-B9v" secondAttribute="trailing" id="60a-KI-6MW"/>
-                    <constraint firstItem="kFu-j8-B9v" firstAttribute="top" secondItem="rlM-Qb-grC" secondAttribute="bottom" constant="-1" id="GrN-Dg-9AP"/>
+                    <constraint firstItem="kFu-j8-B9v" firstAttribute="top" secondItem="rlM-Qb-grC" secondAttribute="bottom" id="GrN-Dg-9AP"/>
                     <constraint firstItem="pik-Vg-OiT" firstAttribute="leading" secondItem="Ejx-vN-IUf" secondAttribute="trailing" constant="8" id="IvP-aw-p73"/>
                     <constraint firstItem="Kln-so-NCf" firstAttribute="top" secondItem="5dI-dr-scV" secondAttribute="bottom" constant="10" id="Lh8-z6-YVm"/>
-                    <constraint firstItem="5dI-dr-scV" firstAttribute="top" secondItem="kFu-j8-B9v" secondAttribute="bottom" constant="-1" id="M7O-PP-On5"/>
+                    <constraint firstItem="5dI-dr-scV" firstAttribute="top" secondItem="kFu-j8-B9v" secondAttribute="bottom" id="M7O-PP-On5"/>
                     <constraint firstItem="5dI-dr-scV" firstAttribute="leading" secondItem="kFu-j8-B9v" secondAttribute="leading" id="NqE-h9-yAd"/>
                     <constraint firstItem="Kln-so-NCf" firstAttribute="leading" secondItem="kFu-j8-B9v" secondAttribute="leading" id="OHG-WH-xKY"/>
+                    <constraint firstItem="Kln-so-NCf" firstAttribute="top" secondItem="5dI-dr-scV" secondAttribute="bottom" constant="10" id="PHI-zL-hMz"/>
                     <constraint firstItem="rlM-Qb-grC" firstAttribute="top" secondItem="Ejx-vN-IUf" secondAttribute="top" id="Rxk-cG-3pN"/>
                     <constraint firstItem="rlM-Qb-grC" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" constant="8" id="Us9-bc-Pbq"/>
                     <constraint firstItem="kFu-j8-B9v" firstAttribute="top" secondItem="edi-gP-GBl" secondAttribute="top" priority="700" constant="10" id="a1A-uq-Uzt"/>
@@ -98,6 +99,11 @@
                     <constraint firstItem="kFu-j8-B9v" firstAttribute="leading" secondItem="rlM-Qb-grC" secondAttribute="leading" id="waP-0c-uJM"/>
                     <constraint firstItem="Kln-so-NCf" firstAttribute="trailing" secondItem="pik-Vg-OiT" secondAttribute="trailing" id="yWf-ss-ha4"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Lh8-z6-YVm"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
             <connections>
