--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="refresh" content="120">
-	<title>Strand ({{ strandList|length }})</title> 
+	<title>Strand ({{ strandV2List|length }})</title> 
 </head>
 <style>
 	html, body { padding: 0; margin: 0; font-family: arial; font-size: 12px;}
@@ -75,8 +75,56 @@
 	<div class='ui-server-id' id='ui-server-id'>
 	</div>
 
+	{% if strandV2List %}
+		<div class='ui-header'> Strand v2 &mdash; {{ strandV2List|length }} accounts </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row-header' >
+				<td class='userid b-r'> ID </td>
+				<td class='name b-r'> Name </td>
+				<td class='created b-r'> Created </td>
+				<td class='db-count center b-r'> Metadata <br> Only </td>
+				<td class='thumbs center b-r'> Photos <br> (7d | all) </td>
+				<td class='strands center b-r'> Strands <br> (7d) </td>
+				<td class='actions center b-r'> Actions <br> (7d | all) </td>
+				<td class='notifications center b-r'> Nots sent <br> (7d)</td>
+				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
+				<td class='location b-r'> Location </td>
+				<td class='location-timestamp b-r'> Location <br> Timestamp </td>
+				<td class='contacts b-r'> Friends | <br> Contacts </td> 
+				<td class='last-build b-r'> Last <br> Build </td>
+				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
+			</tr>
+		{% for entry in strandV2List %}
+			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
+				<td class='userid b-r'> {{ entry.user.id }} </td>
+				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_new href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
+				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
+				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>		
+				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
+				<td class='strand right b-r'> {{entry.weeklyStrands }} </td>
+				<td class='actions right b-r'> {{entry.weeklyActions }} | {{ entry.actions}}</td>
+				<td class='notifications right b-r'> {{ entry.notifications }} </td>
+				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
+				<td class='location right b-r'> 
+					{% if entry.user.last_location_point %}
+					<a target=_new href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
+					{% endif %}
+					{% if entry.user.last_location_accuracy %}
+					(&plusmn;{{ entry.user.last_location_accuracy }}m)
+					{% endif %}
+				</td>
+				<td class='location-timestamp timeago b-r' title='{{ entry.lastLocationTimestamp}}'></td>
+				<td class='contacts b-r center'> {{ entry.friendCount}} | {{ entry.contactCount }} </td>
+				<td class='last-build b-r'> {{ entry.build }} </td>
+				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
+			</tr>
+		{% endfor %}
+		</table>
+	{% endif %}
+
+
 	{% if strandList %}
-		<div class='ui-header'> Strand &mdash; {{ strandList|length }} accounts </div>
+		<div class='ui-header'> Strand v1 &mdash; {{ strandList|length }} accounts </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row-header' >
 				<td class='userid b-r'> ID </td>
